<resources>
    <string name="app_name">My Application</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="image_story">Image</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="empty">Story is Empty</string>
    <string name="home">Home</string>
    <string name="add_story">Add Story</string>
    <string name="insert_image">"Please insert Image"</string>
    <string name="title_activity_story_with_maps">StoryWithMapsActivity</string>
    <string name="maps">Maps</string>

    <string name="welcome_login">Silahkan login untuk mulai bercerita.</string>
    <string name="welcome_register">Silahkan mendaftar untuk menambahkan akun</string>
    <string name="register">Register</string>
    <string name="msg_email">Email</string>
    <string name="hint_email">masukan email kamu</string>
    <string name="hint_password">masukan password kamu ...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>