<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="15dp"
    app:cardCornerRadius="10dp"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/iv_story"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/image_story"
            android:scaleType="centerCrop"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/name"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/iv_story"/>

        <TextView
            android:id="@+id/tvDescStory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="26dp"
            android:layout_marginStart="10dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            tools:text="@string/description"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_name"
            card_view:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:paddingVertical="4dp"
            android:paddingHorizontal="21dp"
            android:textSize="12dp"
            tools:text="@string/date"
            android:textColor="@color/white"
            android:background="@drawable/shape_rectangle_corner"
            android:backgroundTint="@color/purple_500"
            card_view:layout_constraintStart_toStartOf="@id/iv_story"
            card_view:layout_constraintTop_toTopOf="@id/iv_story"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>