<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.addStory.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="Preview Image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/pv_image"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_image"
            app:srcCompat="@color/white_500"
            android:contentDescription="@string/image_story"/>

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/purple_500"
            android:background="@drawable/shape_rectangle_corner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pv_image"
            android:drawableLeft="@drawable/ic_baseline_photo_camera_24" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/purple_500"
            android:background="@drawable/shape_rectangle_corner"
            app:layout_constraintStart_toEndOf="@id/btn_camera"
            app:layout_constraintTop_toTopOf="@id/btn_camera"
            android:drawableLeft="@drawable/ic_baseline_image_24" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/description"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_camera"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="32dp"
            android:hint="masukan deskripsi gambar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"/>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="22dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_desc"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/pv_image"
            app:layout_constraintEnd_toEndOf="@id/pv_image"
            app:layout_constraintStart_toStartOf="@id/pv_image"
            app:layout_constraintTop_toTopOf="@id/pv_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>